--- a/website/index.html
+++ b/website/index.html
@@ -16,7 +16,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Help in ending Loneliness">
     <meta property="og:description" content="We would like you to join us in our fight against loneliness">
-    <meta property="og:image" content="https://aws-hackathon-resources/website/img/main-image.jpeg">
+    <meta property="og:image" content="https://images.pexels.com/photos/853168/pexels-photo-853168.jpeg">
     <meta property="og:type" content="website">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
